# hybrid-atp

./: .env.example  .gitignore  .vercelignore  BENCHMARKS.md  BENCHMARKS.txt  CHANGES.md  DEPLOYMENT.md  HybridAtp.lean  LICENSE  Main.lean  QUICK_DEPLOY.md  README.md  USAGE.md  VALIDATION_GUIDE.md  app.py  architecture.txt  benchmark.py  check_cache.py  check_python.py  lake-manifest.json  lakefile.toml  lean4_demo.ipynb  main.py  pyproject.toml  requirements.txt  run_webapp.bat  strategy_generator.py  success.txt  tactic_validator.py  test_workflow.ipynb  test_workflox.ipynb  vercel.json  workflow.ipynb  workflow.py  zip_cache.py
configs/: example.toml
docs/: ARCHITECTURE.md
hybrid_atp/: cli.py  config.py
lean_core/: LeanCore.lean  README.md  lake-manifest.json  lakefile.lean  lakefile.toml
lean_core/HybridAtp/: Basic.lean  temp_goal_0030b7e1.lean  temp_goal_04a80c5f.lean  temp_goal_050ece7b.lean  (+37 more)
llm_layer/: __init__.py  main.py  model.py  notes.txt  reasoner_model.py  reasoner_model_new.py  translator_model.py
search_layer/: __init__.py  search.py  search.txt
templates/: index.html
tent/: __init__.py  reasoner_model.py  tactics_model.py
tests/: conftest.py  test_config.py  test_data_structures.py  test_json_parser.py  test_strategies.py  test_validator.py
validation_layer/: __init__.py  debug.ipynb  lean_dojo.py  lean_proof_environment.py  test.py  utils.py  validator.py
validator_layer/: lean_validator.txt  main.py  my_old_colab.ipynb  new_validator.py  test.ipynb  test2.ipynb  test_script.ipynb  utils.py  validator.py  validator_layer.txt
(+26 files in other folders)
