[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-atp"
version = "0.2.0"
description = "Hybrid neuro-symbolic automated theorem prover for Lean 4"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "python-dotenv>=1.0",
    "huggingface-hub[inference]>=0.24",
    "transformers>=4.37.0",
    "torch>=2.1",
    "lean-dojo>=2.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.10"]

[project.scripts]
hybrid-atp = "hybrid_atp.cli:main"

[tool.setuptools.packages.find]
include = ["hybrid_atp*", "llm_layer*", "search_layer*", "validation_layer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
